unpackaged/main/default/objects/OpportunityContactRole/fields/ContactID__c.field-meta.xml
<CustomField>
    <fullName>ContactID__c</fullName>
    <formula>ContactId</formula>
    <label>ContactID</label>
    <type>Text</type>
</CustomField>