unpackaged/main/default/objects/OpportunityContactRole/fields/Opportunity_Overview__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Overview__c</fullName>
    <formula>Opportunity.Overview__c</formula>
    <label>Opportunity Overview</label>
    <type>Text</type>
</CustomField>