unpackaged/main/default/objects/OpportunityContactRole/fields/Opportunity_OwnerFullName__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_OwnerFullName__c</fullName>
    <formula>Opportunity.Owner.Full_Name__c</formula>
    <label>Opportunity OwnerFullName</label>
    <type>Text</type>
</CustomField>