unpackaged/main/default/objects/OpportunityContactRole/fields/OpportunityID__c.field-meta.xml
<CustomField>
    <fullName>OpportunityID__c</fullName>
    <formula>OpportunityId</formula>
    <label>OpportunityID</label>
    <type>Text</type>
</CustomField>