unpackaged/main/default/objects/OpportunityContactRole/fields/Project_Stage_Completed__c.field-meta.xml
<CustomField>
    <fullName>Project_Stage_Completed__c</fullName>
    <formula>TEXT(Opportunity.Project_Stage_Completed__c)</formula>
    <label>Project Stage Completed</label>
    <type>Text</type>
</CustomField>