unpackaged/main/default/objects/OpportunityContactRole/fields/Survey_Triggered__c.field-meta.xml
<CustomField>
    <fullName>Survey_Triggered__c</fullName>
    <description>When the last survey was triggered for this Contact</description>
    <inlineHelpText>When the last survey was triggered for this Contact</inlineHelpText>
    <label>Survey Triggered</label>
    <type>DateTime</type>
</CustomField>